--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ nav{
     font-size: 2.4rem;
     font-weight: 500;
     color: #fff;
+    cursor: pointer;
 }
 .sidebar{
     width: 100%;
@@ -47,6 +48,7 @@ nav{
     font-size: 1.6rem;
     padding: .75rem 2.25rem;
     text-transform: uppercase;
+    cursor: pointer;
 }
 .btn{
     border: 1px solid #fff;
@@ -136,6 +138,7 @@ main{
 }
 img{
     width: 100%;
+    cursor: pointer;
 }
 
 .content{
